# dbtvault-generator

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO  pyproject.toml
.github/workflows/: code-qa.yml  publish.yml  tag-and-publish.yml  tag-version.yml  version-tag.yml
src/dbtvault_generator/: dbt_project.yml  main.py
src/dbtvault_generator/cli/: __init__.py  commands.py  handlers.py
src/dbtvault_generator/constants/: exceptions.py  literals.py  types.py
src/dbtvault_generator/files/: file_io.py  search.py
src/dbtvault_generator/generator/: __init__.py  readers.py  runners.py  subprocess.py
src/dbtvault_generator/parsers/: fmt_string.py  params.py  templaters.py
src/dbtvault_generator/wrappers/: __init__.py  dbt_wrapper.py
src/tests/: test_parsers.py  test_runners.py  test_templaters.py  test_validate.py
src/tests/data/input_yml/: dbt_generator_config_bad.yml  dbt_generator_config_extra.yml  dbt_generator_config_good.yml
src/tests/data/projects/broken_project/: dbt_project.yml
src/tests/data/text/: doc_gen_output.txt
